added back button

--- a/partials/movie-view.html
+++ b/partials/movie-view.html
@@ -41,4 +41,5 @@
 </table>
 <div>
 	<a class="btn btn-primary" ui-sref="editMovie({id:movie._id})">Edit Movie</a>
+	<a class="btn btn-success" ui-sref="movies">Back</a>
 </div>
